#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */
typedef  size_t int64_t ;
typedef  int /*<<< orphan*/  RFILE ;

/* Variables and functions */
 size_t filestream_read (int /*<<< orphan*/ *,void*,size_t) ; 

int64_t rfread(void* buffer,
   size_t elem_size, size_t elem_count, RFILE* stream)
{
   return (filestream_read(stream, buffer, elem_size * elem_count) / elem_size);
}